fix test issues